--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,6 +12,7 @@ html {
 
 body {
     background-color: #F6F6F2;
+    position: relative;
 }
 
 .absolute {
@@ -47,6 +48,7 @@ body {
     gap: 50px;
     text-decoration: none;
     list-style: none;
+    margin-right: 50px;
 }
 
 #menu li a {
@@ -60,6 +62,29 @@ body {
     display:inline-block;
     transform: translateY(10px);
     transition: .3s;
+}
+
+
+#return {
+    text-align: center;
+    position: fixed;
+    width: 100px;
+    height: 100px;
+    right: 40px;
+    bottom: 40px;
+    z-index: 9999999;
+}
+
+
+#return a{
+    display: none;
+    opacity: .5;
+    font-size: 50px;
+    color: #000;
+}
+
+#return a.active {
+    display: block;
 }
 
 /* >>>>>>>>> ESTILOS DO TOP-CONTAINER <<<<<<<<<< */
@@ -1220,6 +1245,12 @@ footer p a {
 
 @media (max-width: 520px) {
 
+    #return {
+
+        right: 0;
+        bottom: 0;
+
+    }
     #nav {
         margin-right: 35px;
     }
@@ -1372,13 +1403,18 @@ footer p a {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        gap: 10px;
+        gap: 30px;
     }
 
     .contact-box {
-
         width: 200px;
-        
+
     }
+
+    .contact-box a,
+    .contact-box p{
+    margin-top: 10px;
+
+}
 
 }
